welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: '=' expected but '(' found.
	setCouleurBrosse(c:Color)
                        ^PatternPicture:3: error: illegal start of simple expression
	baisseBrosse()
^PatternPicture:7: error: '=' expected but '(' found.
	avance()
              ^PatternPicture:8: error: illegal start of simple expression
	couleurBrosse(c)
^PatternPicture:20: error: '=' expected but '(' found.
	couleurBrosse(c)
                     ^PatternPicture:21: error: illegal start of simple expression
	avance()
^PatternPicture:35: error: identifier expected but 'for' found.
	for (i <- 1 to 2){
        ^PatternPicture:40: error: identifier expected but 'for' found.
	for (i <- 1 to 2){
        ^PatternPicture:44: error: Missing closing brace `}' assumed here
def motif():
^PatternPicture:45: error: '=' expected but '(' found.
	ligne1()
              ^PatternPicture:46: error: illegal start of simple expression
	recule(4)
^